src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>External_Image_URL__c</fullName>
        <description>External Image URL</description>
        <inlineHelpText>Image URL</inlineHelpText>
        <label>External Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Product_URL__c</fullName>
        <description>External product URL</description>
        <inlineHelpText>External Product URL linked to the &apos;Add to Cart&apos; button</inlineHelpText>
        <label>External Product URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Featured product</description>
        <inlineHelpText>Check to feature this product</inlineHelpText>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>Product unit price in points</description>
        <inlineHelpText>Enter the unit price in points for this product.</inlineHelpText>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Sequence number</description>
        <inlineHelpText>Featured list display order</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>View_by_points</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Points__c</columns>
        <filterScope>Everything</filterScope>
        <label>View by points</label>
    </listViews>
</CustomObject>